# Software_Design

./: .gitignore  Notes.md  README.md
concepts/: C_plus_plus_notes.md  Notes.md
data_recorder/: CMakeLists.txt  main.cpp
data_recorder/android/: CMakeCache.txt  Makefile  cmake_install.cmake  run_this.sh
data_recorder/x86_build/: CMakeCache.txt  Makefile  cmake_install.cmake  recorder
data_serialization/protocol_buffer/: WORKSPACE  cost.proto  example_bin_file.data  main.cpp
data_serialization/protocol_buffer/proto/: cost.pb.cc  cost.pb.h
data_stream/: BUILD  CMakeLists.txt  Makefile  WORKSPACE  gtest.BUILD  main.cpp
data_stream/include/: data_stream.h
data_stream/src/: CMakeLists.txt  bin  data_stream.cpp  main.cpp
design_patterns/expression_tree/lib/: BUILD
design_patterns/gist_codes/: README.md
design_patterns/gist_codes/part1/: first.cpp  second.cpp  third.cpp
design_patterns/gist_codes/part10/: first.cpp
design_patterns/gist_codes/part11/: first.cpp
design_patterns/gist_codes/part2/: a.out  first.cpp  second.cpp
design_patterns/gist_codes/part3/: first.cpp  second.cpp
design_patterns/gist_codes/part4/: first.cpp  second.cpp
design_patterns/gist_codes/part5/: first.cpp  second.cpp  third.cpp
design_patterns/gist_codes/part6/: first.cpp  second.cpp  (+1 more)
includes/: component_node.h
inference_on_edge/: build_tf_for_android.sh  build_tf_for_linux.sh  sample_model.py
inference_on_edge/android_test/: WORKSPACE
obj_tree/includes/: expression_tree.h
protocol_buffer/: BUILD  cost.pb.cc  cost.pb.h  main.cpp
src/: component_node.cpp
(+19 files in other folders)
